# work

./: .clang-format  README.md
bash/K3/: K3-PNR.sh  dahua-camera-config-minimal-k3.cfg  set-config.sh  zero_conf.py
bp/: .clang-format  CMakeLists.txt  bp.cpp  bp.h  main.cpp  uart.cpp  uart.h  utils.cpp  utils.h
modbus_rs485/: .clang-format  CMakeLists.txt
modbus_rs485/scenarios/: test.txt
modbus_rs485/src/: main.cpp  utils.cpp  utils.h
modbus_rs485/src/bp/: bp.cpp  bp.h  uart.cpp  uart.h
modbus_rs485/src/buev/: buev_tcp.cpp  buev_tcp.h  buev_uart.cpp  buev_uart.h  buev_udp.cpp  buev_udp.h  data.cpp  data.h  led.cpp  led.h  triggers.cpp  triggers.h
modbus_rs485/src/freq/: freq_converter.cpp  freq_converter.h  modbus.cpp  modbus.h
modbus_rs485/src/load/: loader.cpp  loader.h  socket.cpp  socket.h
modbus_rs485/src/mm/: mm.cpp  mm.h  myvisa.cpp  myvisa.h
modbus_rs485/src/tests/: psi.cpp  psi.h  psi_results.h
modbus_rs485/src/upvs/: netcat.cpp  netcat.h  upvs.cpp  upvs.h  upvs_data.h
modbus_rs485/xml/: request.xml
parser/: CMakeLists.txt  buev.cpp  buev.h  main.cpp
parser/logs/: .2024-12-23_09_18_13.log.kate-swp
plugin_example/: .clang-format  plugin_example
plugin_example/src/: main.cpp  plugin.cpp  plugin.h  pluginMB.cpp  pluginUART.cpp
razvertka_diagnostic(temp)/: CMakeLists.txt  image.cpp  image.h  main.cpp
tablo/: CMakeLists.txt  bmp.c  bmp.h  ftfont.h  image.cpp  image.h  layer.h  main.cpp  panels.cpp  panels.h  socket.cpp  socket.h  utils.cpp  utils.h
upvs/: CMakeLists.txt  upvs
upvs/src/: data.cpp  data.h  main.cpp  netcat.cpp  netcat.h  upvs.cpp  upvs.h  upvs_data.h  utils.cpp  utils.h
voltmetr/: CMakeLists.txt  main.cpp  mm.cpp  mm.h  myvisa.h
